--- a/src/main/resources/player/tmplayer/Login.fxml
+++ b/src/main/resources/player/tmplayer/Login.fxml
@@ -3,9 +3,9 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="player.tmplayer.Login">
    <children>
       <Label layoutX="286.0" layoutY="192.0" text="tussi" />
+      <Label layoutX="141.0" layoutY="157.0" text="Label" />
    </children>
 </AnchorPane>
