--- a/src/main/resources/player/tmplayer/MiniView144p.fxml
+++ b/src/main/resources/player/tmplayer/MiniView144p.fxml
@@ -3,9 +3,9 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="player.tmplayer.MiniView144p">
    <children>
       <Label layoutX="254.0" layoutY="183.0" text="Sula" />
+      <Label layoutX="69.0" layoutY="131.0" text="Label" />
    </children>
 </AnchorPane>
