--- a/src/main/resources/player/tmplayer/MiniView144p.fxml
+++ b/src/main/resources/player/tmplayer/MiniView144p.fxml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="player.tmplayer.MiniView144p">
+<AnchorPane prefHeight="144.0" prefWidth="256.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="player.tmplayer.MiniView144p">
    <children>
-      <Label layoutX="254.0" layoutY="183.0" text="Sula" />
-      <Label layoutX="69.0" layoutY="131.0" text="Label" />
+      <JFXButton layoutX="204.0" layoutY="1.0" />
+      <JFXButton layoutX="232.0" layoutY="122.0" prefHeight="15.0" prefWidth="17.0" />
+      <JFXButton layoutX="209.0" layoutY="123.0" prefHeight="26.0" prefWidth="24.0" />
+      <Slider layoutX="1.0" layoutY="129.0" prefHeight="14.0" prefWidth="211.0" />
    </children>
 </AnchorPane>
