--- a/src/main/resources/player/tmplayer/MiniView240p.fxml
+++ b/src/main/resources/player/tmplayer/MiniView240p.fxml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="player.tmplayer.MiniView240p">
+<AnchorPane prefHeight="240.0" prefWidth="320.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="player.tmplayer.MiniView240p">
    <children>
-      <Label layoutX="208.0" layoutY="183.0" text="Sula" />
+      <JFXButton layoutX="254.0" layoutY="2.0" prefHeight="26.0" prefWidth="65.0" />
+      <JFXButton layoutX="297.0" layoutY="207.0" prefHeight="34.0" prefWidth="24.0" />
+      <JFXButton layoutX="279.0" layoutY="206.0" prefHeight="34.0" prefWidth="24.0" />
+      <Slider layoutX="3.0" layoutY="220.0" prefHeight="14.0" prefWidth="281.0" />
    </children>
 </AnchorPane>
