--- a/src/main/resources/player/tmplayer/MiniView144p.fxml
+++ b/src/main/resources/player/tmplayer/MiniView144p.fxml
@@ -4,11 +4,11 @@
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="144.0" prefWidth="256.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="player.tmplayer.MiniView144p">
+<AnchorPane prefHeight="480.0" prefWidth="360.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="player.tmplayer.MiniView144p">
    <children>
-      <JFXButton layoutX="204.0" layoutY="1.0" />
-      <JFXButton layoutX="232.0" layoutY="122.0" prefHeight="15.0" prefWidth="17.0" />
-      <JFXButton layoutX="209.0" layoutY="123.0" prefHeight="26.0" prefWidth="24.0" />
-      <Slider layoutX="1.0" layoutY="129.0" prefHeight="14.0" prefWidth="211.0" />
+      <JFXButton layoutX="306.0" layoutY="1.0" prefHeight="26.0" prefWidth="54.0" />
+      <JFXButton layoutX="310.0" layoutY="445.0" prefHeight="15.0" prefWidth="17.0" />
+      <JFXButton layoutX="334.0" layoutY="445.0" prefHeight="26.0" prefWidth="24.0" />
+      <Slider layoutY="451.0" prefHeight="26.0" prefWidth="314.0" />
    </children>
 </AnchorPane>
