--- a/src/main/resources/player/tmplayer/Playlist.fxml
+++ b/src/main/resources/player/tmplayer/Playlist.fxml
@@ -1,11 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="player.tmplayer.Playlist">
-   <children>
-      <Label layoutX="286.0" layoutY="192.0" text="Sale" />
-      <Label layoutX="136.0" layoutY="98.0" text="Label" />
-   </children>
-</AnchorPane>
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="player.tmplayer.Playlist" />
