--- a/src/main/resources/player/tmplayer/MiniView144p.fxml
+++ b/src/main/resources/player/tmplayer/MiniView144p.fxml
@@ -3,6 +3,7 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.media.MediaView?>
 
 <AnchorPane prefHeight="480.0" prefWidth="360.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="player.tmplayer.MiniView144p">
    <children>
@@ -10,5 +11,6 @@
       <JFXButton layoutX="310.0" layoutY="445.0" prefHeight="15.0" prefWidth="17.0" />
       <JFXButton layoutX="334.0" layoutY="445.0" prefHeight="26.0" prefWidth="24.0" />
       <Slider layoutY="451.0" prefHeight="26.0" prefWidth="314.0" />
+      <MediaView fitHeight="200.0" fitWidth="200.0" layoutY="8.0" />
    </children>
 </AnchorPane>
