--- a/src/main/resources/player/tmplayer/MiniView240p.fxml
+++ b/src/main/resources/player/tmplayer/MiniView240p.fxml
@@ -12,5 +12,6 @@
       <JFXButton layoutX="279.0" layoutY="206.0" prefHeight="34.0" prefWidth="24.0" />
       <Slider layoutX="3.0" layoutY="220.0" prefHeight="14.0" prefWidth="281.0" />
       <MediaView fitHeight="200.0" fitWidth="200.0" layoutX="3.0" layoutY="14.0" />
+      <JFXButton layoutX="51.0" layoutY="108.0" />
    </children>
 </AnchorPane>
