--- a/src/main/resources/player/tmplayer/MiniView240p.fxml
+++ b/src/main/resources/player/tmplayer/MiniView240p.fxml
@@ -1,17 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import javafx.scene.control.Slider?>
+<?import com.jfoenix.controls.JFXSlider?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.media.MediaView?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="240.0" prefWidth="320.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="player.tmplayer.MiniView240p">
+<AnchorPane maxHeight="240.0" maxWidth="352.0" minHeight="240.0" minWidth="352.0" prefHeight="240.0" prefWidth="352.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="player.tmplayer.MiniView144p">
    <children>
-      <JFXButton layoutX="254.0" layoutY="2.0" prefHeight="26.0" prefWidth="65.0" />
-      <JFXButton layoutX="297.0" layoutY="207.0" prefHeight="34.0" prefWidth="24.0" />
-      <JFXButton layoutX="279.0" layoutY="206.0" prefHeight="34.0" prefWidth="24.0" />
-      <Slider layoutX="3.0" layoutY="220.0" prefHeight="14.0" prefWidth="281.0" />
-      <MediaView fitHeight="200.0" fitWidth="200.0" layoutX="3.0" layoutY="14.0" />
-      <JFXButton layoutX="51.0" layoutY="108.0" />
+      <BorderPane prefHeight="240.0" prefWidth="352.0">
+         <center>
+            <MediaView fitHeight="50.0" fitWidth="50.0" BorderPane.alignment="CENTER" />
+         </center>
+         <top>
+            <HBox alignment="TOP_RIGHT" prefHeight="42.0" prefWidth="352.0" BorderPane.alignment="CENTER">
+               <children>
+                  <JFXButton text="Back to  player" textFill="#0f9d58">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </JFXButton>
+               </children>
+            </HBox>
+         </top>
+         <bottom>
+            <HBox alignment="CENTER" prefHeight="36.0" prefWidth="121.0" BorderPane.alignment="TOP_LEFT">
+               <children>
+                  <JFXSlider fx:id="soundbar" prefHeight="14.0" prefWidth="327.0" />
+               </children>
+            </HBox>
+         </bottom>
+      </BorderPane>
    </children>
 </AnchorPane>
