--- a/src/main/resources/player/tmplayer/player.fxml
+++ b/src/main/resources/player/tmplayer/player.fxml
@@ -128,7 +128,7 @@
         </HBox>
         <AnchorPane layoutX="100.0" layoutY="602.0" prefHeight="33.0" prefWidth="800.0" AnchorPane.bottomAnchor="45.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0">
          <children>
-            <JFXSlider fx:id="playbar" layoutX="260.0" layoutY="12.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" />
+            <JFXSlider fx:id="playbar" layoutX="260.0" layoutY="12.0" max="99.9" value="0.1" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" />
          </children>
         </AnchorPane>
       <BorderPane layoutY="636.0" prefHeight="45.0" prefWidth="1000.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
