--- a/src/main/resources/player/tmplayer/player.fxml
+++ b/src/main/resources/player/tmplayer/player.fxml
@@ -3,6 +3,7 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXSlider?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -110,7 +111,7 @@
         </HBox>
         <HBox alignment="BOTTOM_CENTER" layoutY="602.0" prefHeight="33.0" prefWidth="100.0" AnchorPane.bottomAnchor="45.0" AnchorPane.leftAnchor="0.0">
             <children>
-                <Label fx:id="nowtime" alignment="CENTER" prefHeight="26.0" prefWidth="97.0" text="--:--" textFill="#0f9d58" wrapText="true">
+                <Label fx:id="nowtime" alignment="CENTER" prefHeight="26.0" prefWidth="90.0" text="--:--" textFill="#0f9d58" wrapText="true">
                     <font>
                         <Font size="17.0" />
                     </font>
@@ -128,16 +129,27 @@
         </HBox>
         <AnchorPane layoutX="100.0" layoutY="602.0" prefHeight="33.0" prefWidth="800.0" AnchorPane.bottomAnchor="45.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0">
          <children>
-            <JFXSlider fx:id="playbar" layoutX="260.0" layoutY="12.0" max="99.9" value="0.1" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" />
+            <JFXSlider fx:id="playbar" layoutX="260.0" layoutY="12.0" max="99.9" value="0.1" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor></JFXSlider>
          </children>
         </AnchorPane>
       <BorderPane layoutY="636.0" prefHeight="45.0" prefWidth="1000.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <right>
               <HBox alignment="CENTER_RIGHT" prefHeight="45.0" prefWidth="300.0" BorderPane.alignment="CENTER">
                   <children>
-                      <JFXButton text="|&lt;)" />
-                  <JFXSlider fx:id="soundbar" />
-                      <Label fx:id="vlevel" text="Label" textFill="#0f9d58">
+                  <JFXButton onAction="#skip60" text=" ">
+                     <graphic>
+                        <ImageView fitHeight="26.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../img/full.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </JFXButton>
+                  <JFXSlider fx:id="soundbar" majorTickUnit="10.0" />
+                      <Label fx:id="vlevel" text="50" textFill="#0f9d58">
                           <font>
                               <Font size="17.0" />
                           </font>
