--- a/src/main/resources/player/tmplayer/Playlist.fxml
+++ b/src/main/resources/player/tmplayer/Playlist.fxml
@@ -1,198 +1,124 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" styleClass="playarea" stylesheets="@player.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <VBox layoutX="6.0" layoutY="46.0" prefHeight="385.0" prefWidth="340.0">
+      <HBox prefHeight="110.0" prefWidth="700.0" AnchorPane.topAnchor="0.0">
          <children>
-            <HBox prefHeight="35.0" prefWidth="340.0">
-               <children>
-                  <Label prefHeight="35.0" prefWidth="340.0" text="Video Name" textFill="#0f9d58">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </Label>
-               </children>
-            </HBox>
-            <HBox prefHeight="35.0" prefWidth="340.0">
-               <children>
-                  <Label fx:id="plV1" prefHeight="35.0" text="Label" textFill="#0f9d58">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </Label>
-               </children>
-            </HBox>
-            <HBox alignment="CENTER_LEFT" prefHeight="35.0" prefWidth="340.0">
-               <children>
-                  <Label fx:id="plV2" text="Label" textFill="#0f9d58">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </Label>
-               </children>
-            </HBox>
-            <HBox fx:id="plV3" prefHeight="35.0" prefWidth="340.0">
-               <children>
-                  <Label fx:id="plV3" prefHeight="35.0" text="Label" textFill="#0f9d58">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </Label>
-               </children>
-            </HBox>
-            <HBox fx:id="plV4" alignment="CENTER_LEFT" prefHeight="35.0" prefWidth="340.0">
-               <children>
-                  <Label fx:id="plV4" text="Label" textFill="#0f9d58">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </Label>
-               </children>
-            </HBox>
-            <HBox fx:id="plV5" prefHeight="35.0" prefWidth="340.0">
-               <children>
-                  <Label fx:id="plV5" prefHeight="35.0" text="Label" textFill="#0f9d58">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </Label>
-               </children>
-            </HBox>
-            <HBox prefHeight="36.0" prefWidth="280.0">
-               <children>
-                  <Label fx:id="plV6" prefHeight="35.0" prefWidth="340.0" text="Label" textFill="#0f9d58">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </Label>
-               </children>
-            </HBox>
-            <HBox fx:id="plV7" prefHeight="35.0" prefWidth="340.0">
-               <children>
-                  <Label fx:id="plV7" prefHeight="35.0" text="Label" textFill="#0f9d58">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </Label>
-               </children>
-            </HBox>
-            <HBox fx:id="plV8" prefHeight="35.0" prefWidth="340.0">
-               <children>
-                  <Label fx:id="plV8" prefHeight="35.0" text="Label" textFill="#0f9d58">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </Label>
-               </children>
-            </HBox>
-            <HBox fx:id="plV9" prefHeight="35.0" prefWidth="340.0">
-               <children>
-                  <Label fx:id="plV9" prefHeight="35.0" text="Label" textFill="#0f9d58">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </Label>
-               </children>
-            </HBox>
-            <HBox fx:id="plV10" prefHeight="35.0" prefWidth="340.0">
-               <children>
-                  <Label fx:id="plV10" prefHeight="35.0" text="Label" textFill="#0f9d58">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </Label>
-               </children>
-            </HBox>
-         </children>
-      </VBox>
-      <HBox alignment="CENTER" prefHeight="45.0" prefWidth="640.0">
-         <children>
-            <Label />
-            <Label prefHeight="45.0" prefWidth="160.0" text="PLAY LISTS" textFill="#0f9d58">
+            <Label alignment="CENTER" prefHeight="110.0" prefWidth="702.0" text="TrustMe Player" textFill="#0f9d58" wrapText="true">
                <font>
-                  <Font size="17.0" />
+                  <Font size="35.0" />
                </font>
             </Label>
          </children>
       </HBox>
-      <VBox layoutX="417.0" layoutY="45.0" prefHeight="386.0" prefWidth="226.0">
+      <HBox alignment="CENTER" layoutY="430.0" prefHeight="70.0" prefWidth="700.0" AnchorPane.bottomAnchor="0.0">
          <children>
-            <HBox prefHeight="35.0" prefWidth="340.0">
-               <children>
-                  <Label prefHeight="35.0" prefWidth="340.0" text="Label" textFill="#0f9d58">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </Label>
-               </children>
-            </HBox>
-            <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="54.0" text="Play">
+            <JFXButton fx:id="btp" prefHeight="38.0" prefWidth="154.0" text="Back to  player" textFill="#0f9d58">
                <font>
-                  <Font size="17.0" />
+                  <Font size="19.0" />
                </font>
-            </Button>
-            <Button mnemonicParsing="false" prefHeight="35.0" text="Play">
-               <font>
-                  <Font size="17.0" />
-               </font>
-            </Button>
-            <Button mnemonicParsing="false" prefHeight="35.0" text="Play">
-               <font>
-                  <Font size="17.0" />
-               </font>
-            </Button>
-            <Button mnemonicParsing="false" prefHeight="35.0" text="Play">
-               <font>
-                  <Font size="17.0" />
-               </font>
-            </Button>
-            <Button mnemonicParsing="false" prefHeight="35.0" text="Play">
-               <font>
-                  <Font size="17.0" />
-               </font>
-            </Button>
-            <Button mnemonicParsing="false" prefHeight="35.0" text="Play">
-               <font>
-                  <Font size="17.0" />
-               </font>
-            </Button>
-            <Button mnemonicParsing="false" prefHeight="35.0" text="Play">
-               <font>
-                  <Font size="17.0" />
-               </font>
-            </Button>
-            <Button mnemonicParsing="false" prefHeight="35.0" text="Play">
-               <font>
-                  <Font size="17.0" />
-               </font>
-            </Button>
-            <Button mnemonicParsing="false" prefHeight="35.0" text="Play">
-               <font>
-                  <Font size="17.0" />
-               </font>
-            </Button>
-            <Button mnemonicParsing="false" prefHeight="35.0" text="Play">
-               <font>
-                  <Font size="17.0" />
-               </font>
-            </Button>
-         </children>
-      </VBox>
-      <HBox alignment="CENTER" layoutY="432.0" prefHeight="45.0" prefWidth="640.0">
-         <children>
-            <Label prefHeight="45.0" prefWidth="100.0" text="BACK" textFill="#0f9d58">
-               <font>
-                  <Font size="17.0" />
-               </font>
-            </Label>
+            </JFXButton>
          </children>
       </HBox>
+      <AnchorPane layoutY="110.0" prefHeight="320.0" prefWidth="700.0" AnchorPane.bottomAnchor="70.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="110.0">
+         <children>
+            <AnchorPane prefHeight="32.0" prefWidth="700.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+               <children>
+                  <JFXButton fx:id="v1" alignment="TOP_LEFT" layoutX="179.0" prefHeight="32.0" text="Video" textFill="#0f9d58" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="0.0">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </JFXButton>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutY="32.0" prefHeight="32.0" prefWidth="700.0">
+               <children>
+                  <JFXButton fx:id="v2" alignment="TOP_LEFT" layoutX="179.0" prefHeight="32.0" text="Video" textFill="#0f9d58" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="0.0">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </JFXButton>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutY="64.0" prefHeight="32.0" prefWidth="700.0">
+               <children>
+                  <JFXButton fx:id="v3" alignment="TOP_LEFT" layoutX="179.0" prefHeight="32.0" text="Video" textFill="#0f9d58" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="0.0">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </JFXButton>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutY="96.0" prefHeight="32.0" prefWidth="700.0">
+               <children>
+                  <JFXButton fx:id="v4" alignment="TOP_LEFT" layoutX="179.0" prefHeight="32.0" text="Video" textFill="#0f9d58" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="0.0">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </JFXButton>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutY="128.0" prefHeight="32.0" prefWidth="700.0">
+               <children>
+                  <JFXButton fx:id="v5" alignment="TOP_LEFT" layoutX="179.0" prefHeight="32.0" text="Video" textFill="#0f9d58" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="0.0">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </JFXButton>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutY="160.0" prefHeight="32.0" prefWidth="700.0">
+               <children>
+                  <JFXButton fx:id="v6" alignment="TOP_LEFT" layoutX="179.0" prefHeight="32.0" text="Video" textFill="#0f9d58" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="0.0">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </JFXButton>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutY="192.0" prefHeight="32.0" prefWidth="700.0">
+               <children>
+                  <JFXButton fx:id="v7" alignment="TOP_LEFT" layoutX="179.0" prefHeight="32.0" text="Video" textFill="#0f9d58" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="0.0">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </JFXButton>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutY="224.0" prefHeight="32.0" prefWidth="700.0">
+               <children>
+                  <JFXButton fx:id="v8" alignment="TOP_LEFT" layoutX="179.0" prefHeight="32.0" text="Video" textFill="#0f9d58" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="0.0">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </JFXButton>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutY="256.0" prefHeight="32.0" prefWidth="700.0">
+               <children>
+                  <JFXButton fx:id="v9" alignment="TOP_LEFT" layoutX="179.0" prefHeight="32.0" text="Video" textFill="#0f9d58" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="0.0">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </JFXButton>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutY="288.0" prefHeight="32.0" prefWidth="700.0">
+               <children>
+                  <JFXButton fx:id="v9" alignment="TOP_LEFT" layoutX="179.0" prefHeight="32.0" text="Video" textFill="#0f9d58" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="0.0">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </JFXButton>
+               </children>
+            </AnchorPane>
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
