--- a/src/main/resources/player/tmplayer/MiniView240p.fxml
+++ b/src/main/resources/player/tmplayer/MiniView240p.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.media.MediaView?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="240.0" maxWidth="352.0" minHeight="240.0" minWidth="352.0" prefHeight="240.0" prefWidth="352.0" styleClass="playarea" stylesheets="@player.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="player.tmplayer.MiniView240p">
+<AnchorPane maxHeight="240.0" maxWidth="352.0" minHeight="240.0" minWidth="352.0" prefHeight="240.0" prefWidth="352.0" styleClass="playarea" stylesheets="@player.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="player.tmplayer.player">
    <children>
       <BorderPane prefHeight="240.0" prefWidth="352.0">
          <center>
